force-app/main/default/objects/Residency_Checklist_temp__c/Residency_Checklist_temp__c.object-meta.xml
<CustomObject>
    <label>Residency Checklist old</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residency Checklists old</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>