force-app/main/default/objects/Residency_Checklist_temp__c/fields/AustralianPassportHolder__c.field-meta.xml
<CustomField>
    <fullName>AustralianPassportHolder__c</fullName>
    <label>Australian Passport Holder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility Bill reflecting International Address (not more than 3 months old, or 6 months if permitted by the Premium Service Operations Manager or above)</fullName>
            </value>
            <value>
                <fullName>Residency VISA or proof of Right of Residency in another country</fullName>
            </value>
            <value>
                <fullName>Travel Documents – A Copy of E-Ticket/Airline Ticket (must be valid and clearly</fullName>
            </value>
            <value>
                <fullName>International Government issued Identity photo card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>