force-app/main/default/objects/Residency_Checklist_temp__c/fields/choice__c.field-meta.xml
<CustomField>
    <fullName>choice__c</fullName>
    <label>choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>