force-app/main/default/objects/Residency_Checklist_temp__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>count</label>
    <type>AutoNumber</type>
</CustomField>