force-app/main/default/objects/Residency_Checklist_temp__c/fields/Does_the_patron_drive_to_NSW__c.field-meta.xml
<CustomField>
    <fullName>Does_the_patron_drive_to_NSW__c</fullName>
    <label>Does the patron drive to NSW?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>