force-app/main/default/objects/Residency_Checklist_temp__c/fields/Does_the_patron_have_travel_document__c.field-meta.xml
<CustomField>
    <fullName>Does_the_patron_have_travel_document__c</fullName>
    <inlineHelpText>Obtain a copy of a document which clearly shows entry and exit from NSW, such as:

A copy of The Star limousine booking - Arrival and Department Transfer to and from The Star, and OR
A copy of E-Ticket / Airline Ticket / Bus / Cruise Ship Ticket or provide other form of travel from Interstate to The Star
If the guest has driven to The Star from Interstate, obtain documentation that confirms this mode of travel e.g. fuel receipts</inlineHelpText>
    <label>Does the patron have travel document?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>