force-app/main/default/objects/Residency_Checklist_temp__c/fields/Does_the_Person_hold_current_NSW_Lic__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Person_hold_current_NSW_Lic__c</fullName>
    <label>Does the Person hold current NSW Lic?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>