force-app/main/default/objects/Residency_Checklist_temp__c/fields/DomesticPartA__c.field-meta.xml
<CustomField>
    <fullName>DomesticPartA__c</fullName>
    <label>Part A</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does the person hold a Drivers License or Proof of Age card issued from the same state as the program they intend to participate in? If YES, continue to Q3, If NO, continue to Q2</fullName>
            </value>
            <value>
                <fullName>Does the person hold a Drivers License or Proof of Age card issued from a different state as the program they intend to participate in? If YES, provide a copy of eligible Drivers License or Proof of Age card  If NO, continue to Q3</fullName>
            </value>
            <value>
                <fullName>3)	Has the person provided a Secondary Proof of Address document containing an address that is different to the state the program will participate in and reflects residential address in Customer Relation Management (CRM) or Casino Management System (CMS)?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>