force-app/main/default/objects/Residency_Checklist_temp__c/fields/DomesticPartB__c.field-meta.xml
<CustomField>
    <fullName>DomesticPartB__c</fullName>
    <label>Part B</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1)     Are there personal details/remarks in CMS or CRM that may prevent the person from participating in a rebate program?</fullName>
            </value>
            <value>
                <fullName>2)	Is the address in CMS or CRM the same state as the program they intend to participate? If yes, why? Please  proceed to Comment section C2.</fullName>
            </value>
            <value>
                <fullName>3)	Is the drivers license in CMS or CRM the same state as the program they intend to participate? If yes, why? Please proceed to Comment section C3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>