force-app/main/default/objects/Residency_Checklist_temp__c/fields/Entry_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Exit_Date__c</fullName>
    <formula>IF(Entry_Date__c &gt; Today()- 365 &amp;&amp; Exit_Date__c &gt; Today()- 365,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Exit Date</label>
    <type>Checkbox</type>
</CustomField>