force-app/main/default/objects/Residency_Checklist_temp__c/fields/Has_the_patron_spent_less_than_183_days__c.field-meta.xml
<CustomField>
    <fullName>Has_the_patron_spent_less_than_183_days__c</fullName>
    <label>Has the patron spent less than 183 days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>