force-app/main/default/objects/Residency_Checklist_temp__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <formula>HYPERLINK(&quot;https://tseg--dev.lightning.force.com/&quot;+Id,(TEXT(Entry_State__c ) + &apos;-&apos; + count__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>