force-app/main/default/objects/Residency_Checklist_temp__c/fields/International_Gov_t_Identity_Photo_Card__c.field-meta.xml
<CustomField>
    <fullName>International_Gov_t_Identity_Photo_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>International Government issued Identity Photo Card</inlineHelpText>
    <label>International Gov&apos;t  Identity Photo Card</label>
    <type>Checkbox</type>
</CustomField>