force-app/main/default/objects/Residency_Checklist_temp__c/fields/InternationalPartA__c.field-meta.xml
<CustomField>
    <fullName>InternationalPartA__c</fullName>
    <label>Part A</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does the person hold an Australian or New Zealand passport?</fullName>
            </value>
            <value>
                <fullName>Does the person hold an Australian or New Zealand passport? If yes, obtain a copy and continue to Part B.</fullName>
            </value>
            <value>
                <fullName>Does the person hold other countries passport other than Australia or New Zealand? If yes, obtain a copy. If no, continue to Part B.</fullName>
            </value>
            <value>
                <fullName>Has the person been inside Australia less than 3 months.</fullName>
            </value>
            <value>
                <fullName>Has the person not entered Australia before this trip in the last 12 months?</fullName>
            </value>
            <value>
                <fullName>From our records, has the participant spent less than 180 days in Australia in the past 12 months? If no, unable to participate on a rebate program.</fullName>
            </value>
            <value>
                <fullName>Does the person hold other countries passport other than Australia or New Zealand?</fullName>
                <isActive>false</isActive>
                <label>Does the person hold other countries passport other than Australia or New Zealand?</label>
            </value>
            <value>
                <fullName>For non-Australian passport holders, does the person have a tourist visa or a visa of subclass 600, 601, 602, 651 or 771?</fullName>
                <isActive>false</isActive>
                <label>For non-Australian passport holders, does the person have a tourist visa or a visa of subclass 600, 601, 602, 651 or 771?</label>
            </value>
            <value>
                <fullName>Has the participant spent less than 180 days in Australia in the past 12 months?</fullName>
                <isActive>false</isActive>
                <label>Has the participant spent less than 180 days in Australia in the past 12 months?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>