force-app/main/default/objects/Residency_Checklist_temp__c/fields/InternationalPartC__c.field-meta.xml
<CustomField>
    <fullName>InternationalPartC__c</fullName>
    <label>Part C</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1) Are there personal details/remarks in Customer Relation Management (CRM) or Casino Management System (CMS) that may prevent the person from participating in a rebate program?</fullName>
            </value>
            <value>
                <fullName>2) Australian address/phone number recorded in CRM and/or CMS, if yes why?</fullName>
            </value>
            <value>
                <fullName>3) Australian Drivers License recorded in CRM and/or CMS, if yes why?</fullName>
            </value>
            <value>
                <fullName>4) Other – please provide detailed comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>