force-app/main/default/objects/Residency_Checklist_temp__c/fields/InternationalPartD__c.field-meta.xml
<CustomField>
    <fullName>InternationalPartD__c</fullName>
    <label>Part D</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1) Is the participant staying in house? If NO, provide address/contact details and reason they are not staying in house</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>