force-app/main/default/objects/Residency_Checklist_temp__c/fields/InternationPartB__c.field-meta.xml
<CustomField>
    <fullName>InternationPartB__c</fullName>
    <label>Part B</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does the person hold an Australian Medicare Card or Drivers License? (Take a copy if card is provided)</fullName>
            </value>
            <value>
                <fullName>Does the person have an Australian Business visa or a Working Holiday Visa – subclass 417, 462?</fullName>
            </value>
            <value>
                <fullName>Does the person have any Educational Interests in Australia? If yes, provide details of who and where?</fullName>
            </value>
            <value>
                <fullName>Obtain a copy of a document which clearly shows entry and exit from Australia, such as: A copy of E-ticket/Airline ticket and/or Boarding pass (must be valid and clearly show entry and exit from Australia)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>