force-app/main/default/objects/Residency_Checklist_temp__c/fields/Is_Patron_Travel_Document_attached__c.field-meta.xml
<CustomField>
    <fullName>Is_Patron_Travel_Document_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patron Travel Document attached?</label>
    <type>Checkbox</type>
</CustomField>