force-app/main/default/objects/Residency_Checklist_temp__c/fields/Lease_Agreement_25__c.field-meta.xml
<CustomField>
    <fullName>Lease_Agreement_25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Agreement (+25)</label>
    <type>Checkbox</type>
</CustomField>