force-app/main/default/objects/Residency_Checklist_temp__c/fields/Non_Australian_Passport_Holder__c.field-meta.xml
<CustomField>
    <fullName>Non_Australian_Passport_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Non-Australian or non-New Zealand Passport</inlineHelpText>
    <label>Non-Australian Passport Holder</label>
    <type>Checkbox</type>
</CustomField>