force-app/main/default/objects/Residency_Checklist_temp__c/fields/Non_Australian_Passport_Holders__c.field-meta.xml
<CustomField>
    <fullName>Non_Australian_Passport_Holders__c</fullName>
    <label>Non-Australian Passport Holders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VEVO Report	50</fullName>
            </value>
            <value>
                <fullName>International Government issued Identity Photo Card</fullName>
            </value>
            <value>
                <fullName>Travel Documents – A Copy of E-Ticket/Airline Ticket (must be valid and clearly show entry and exit from Australia) and/or Boarding pass</fullName>
            </value>
            <value>
                <fullName>Utility Bill reflecting International Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>