force-app/main/default/objects/Residency_Checklist_temp__c/fields/Non_NSW_Drivers_License_Age_Card_50__c.field-meta.xml
<CustomField>
    <fullName>Non_NSW_Drivers_License_Age_Card_50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non NSW Drivers License / Age Card (+50)</label>
    <type>Checkbox</type>
</CustomField>