force-app/main/default/objects/Residency_Checklist_temp__c/fields/Patron_ID__c.field-meta.xml
<CustomField>
    <fullName>Patron_ID__c</fullName>
    <formula>IF(NOT( ISBLANK( Contact__c )),  Contact__r.Patron_ID__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patron ID</label>
    <type>Text</type>
</CustomField>