force-app/main/default/objects/Residency_Checklist_temp__c/fields/Please_provide_interstate_car_registrati__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_interstate_car_registrati__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provide interstate car registration no.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>