force-app/main/default/objects/Residency_Checklist_temp__c/fields/Residency_Status__c.field-meta.xml
<CustomField>
    <fullName>Residency_Status__c</fullName>
    <label>Residency Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>