force-app/main/default/objects/Residency_Checklist_temp__c/fields/Residency_VISA_or_proof_of_Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency_VISA_or_proof_of_Residency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Residency VISA or proof of Right of Residency in another country.</inlineHelpText>
    <label>Residency  VISA or proof of Residency</label>
    <type>Checkbox</type>
</CustomField>