force-app/main/default/objects/Residency_Checklist_temp__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Star Entertainment Group LtdUnlimited EditionSandbox</fullName>
            </value>
            <value>
                <fullName>Initiate</fullName>
            </value>
            <value>
                <fullName>Travel Questionnaire?</fullName>
            </value>
            <value>
                <fullName>Travel Dates</fullName>
            </value>
            <value>
                <fullName>Travel Documents</fullName>
            </value>
            <value>
                <fullName>Join Program</fullName>
            </value>
            <value>
                <fullName>Cash Play</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>