force-app/main/default/objects/Residency_Checklist_temp__c/fields/Travel_Documents__c.field-meta.xml
<CustomField>
    <fullName>Travel_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Travel Documents - A Copy of E- Ticket/Airline Ticket (must be valid and clearly show entry and exit from)</inlineHelpText>
    <label>Travel Documents</label>
    <type>Checkbox</type>
</CustomField>