force-app/main/default/objects/Residency_Checklist_temp__c/recordTypes/Initiate_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Initiate_Record_Type</fullName>
    <active>true</active>
    <label>Initiate Record Type</label>
</RecordType>