force-app/main/default/objects/Residency_Checklist_temp__c/recordTypes/ResidencyCheckList.recordType-meta.xml
<RecordType>
    <fullName>ResidencyCheckList</fullName>
    <active>false</active>
    <label>ResidencyCheckList</label>
</RecordType>