force-app/main/default/objects/Residency_Checklist_temp__c/validationRules/Declined_Join_Program_Cash_play_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Declined_Join_Program_Cash_play_only</fullName>
    <active>true</active>
    <errorConditionFormula>/*
AND(
ISPICKVAL(Does_the_patron_have_travel_document__c, &apos;No&apos;),
ISPICKVAL(Does_the_patron_drive_to_NSW__c, &apos;NO&apos;))
*/

IF($Permission.Skip_Validations_Permission
,false
,AND(
ISPICKVAL(Does_the_patron_have_travel_document__c, &apos;No&apos;),
ISPICKVAL(Does_the_patron_drive_to_NSW__c, &apos;NO&apos;))
)</errorConditionFormula>
    <errorMessage>DECLINED JOIN PROGRAM, CASH PLAY ONLY</errorMessage>
</ValidationRule>