force-app/main/default/objects/Residency_Checklist_temp__c/validationRules/Does_the_patron_drive_to_NSW.validationRule-meta.xml
<ValidationRule>
    <fullName>Does_the_patron_drive_to_NSW</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Does_the_patron_have_travel_document__c, &apos;No&apos;),
ISBLANK(TEXT(Does_the_patron_drive_to_NSW__c))
)</errorConditionFormula>
    <errorDisplayField>Does_the_patron_drive_to_NSW__c</errorDisplayField>
    <errorMessage>Does the patron drive to NSW is required, if Does the Patron have Travel document is set to No</errorMessage>
</ValidationRule>