force-app/main/default/objects/Residency_Checklist_temp__c/validationRules/Exit_Date_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Exit_Date_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  $Permission.Skip_Validations_Permission, false, 
AND( 

NOT(ISBLANK(Entry_Date__c)),

ISBLANK(Exit_Date__c)

))</errorConditionFormula>
    <errorDisplayField>Exit_Date__c</errorDisplayField>
    <errorMessage>Exit Date is Mandatory, if Entry date is filled in.</errorMessage>
</ValidationRule>